samples/_failures_safe/1761702912_34e5a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_738d38ca.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_738d38ca.c:144:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  144 |     for (int i
      |     ^~~
./samples/SAFE/__tmp_738d38ca.c:144:5: error: expected declaration or statement at end of input
